feat: added changing audio icon

--- a/eww/eww.scss
+++ b/eww/eww.scss
@@ -70,6 +70,9 @@ $system-whitespcae: 20px;
   background-color: $sky;
 }
 
+.brightness {
+  background-color: $yellow;
+}
 .wifi {
   background-color: $teal;
 }
