feat: added a wifi manager widget

--- a/eww/css/general.scss
+++ b/eww/css/general.scss
@@ -29,7 +29,7 @@
   padding-left: $whitespace;
   padding-right: $whitespace;
 
-  border-radius: 5px;
+  border-radius: $border-radius;
 }
 
 .tooltip {
