feat: added hover effect + small adjustments

--- a/eww/css/widgets.scss
+++ b/eww/css/widgets.scss
@@ -57,6 +57,14 @@
   background-color: $green;
 }
 
+.battery:hover {
+  background-color: rgba($color: $green, $alpha: 0.9);
+}
+
 .time {
   background-color: $peach;
+}
+
+.time:hover {
+  background-color: rgba($color: $peach, $alpha: 0.9);
 }
