feat: added workspace widget

--- a/eww/css/general.scss
+++ b/eww/css/general.scss
@@ -1,12 +1,8 @@
 // Layout
 
 .layout {
-  margin-left: $system-whitespcae;
-  margin-right: $system-whitespcae;
-}
-
-.container-center {
-  background-color: $mauve;
+  margin-left: $system-whitespace;
+  margin-right: $system-whitespace;
 }
 
 // Base styles
