--- a/eww/eww.scss
+++ b/eww/eww.scss
@@ -1,10 +1,10 @@
 @import "css/colorscheme-catppuccin-mocha.scss";
 
 $whitespace: 10px;
-$system-whitespcae: 20px;
+$system-whitespace: 20px;
 $border-radius: 5px;
 
-// General
+// Reset everything
 
 * {
   all: unset;
