[#4] improve workspace bar ui

--- a/eww/css/widgets.scss
+++ b/eww/css/widgets.scss
@@ -69,6 +69,22 @@
   background-color: rgba($color: $peach, $alpha: 0.9);
 }
 
-.workspace {
-  background: $mantle;
+.workspace-content {
+  color: $text;
+}
+
+.current {
+  background: $mauve;
+}
+
+.current > .workspace-content {
+  color: $base;
+}
+
+.occupied {
+  background: $overlay0;
+}
+
+.empty {
+  background: $surface0;
 }
