--- a/eww/wallpaper/wallpaper.scss
+++ b/eww/wallpaper/wallpaper.scss
@@ -5,6 +5,24 @@
   padding-right: 60px;
 }
 
+.wallpaper-filter {
+  color: $text;
+  caret-color: $text;
+
+  padding: $whitespace;
+  padding-left: $whitespace * 2;
+  padding-right: $whitespace * 2;
+
+  border-radius: $border-radius * 5;
+  border-color: $overlay0;
+  border-width: $border-size;
+  border-style: solid;
+}
+
+.wallpaper-filter:focus {
+  border-color: $mauve;
+}
+
 .thumbnail {
   border-radius: $border-radius * 5;
 }
