feat: added systray, but it can be a bit error-prone

--- a/eww/bar/bar.scss
+++ b/eww/bar/bar.scss
@@ -2,3 +2,8 @@
 @import "scss/controls.scss";
 @import "scss/system.scss";
 @import "scss/workspace.scss";
+
+.systray {
+  background-color: $overlay2;
+  color: $text;
+}
