feat: [#6] added security type to network-connector

--- a/eww/network/network.scss
+++ b/eww/network/network.scss
@@ -15,6 +15,10 @@
   background-color: rgba($color: $base, $alpha: 0.1);
 }
 
+.ssid .subtext {
+  color: $overlay0;
+}
+
 .wifi-off:hover {
   background-color: $red;
 }
