feat: [#2] added icons and battery to the bluetooth widget

--- a/eww/bluetooth/bluetooth.scss
+++ b/eww/bluetooth/bluetooth.scss
@@ -24,9 +24,6 @@
   background-color: $red;
 }
 
-.tmp {
-  background-color: red;
-}
-.tmp2 {
-  background-color: white;
+.bluetooth-padding {
+  padding-right: 10px;
 }
