--- a/eww/bar/bar.scss
+++ b/eww/bar/bar.scss
@@ -5,5 +5,26 @@
 
 .systray {
   background-color: $overlay2;
-  color: $text;
+
+  menu {
+    padding: $whitespace;
+    background-color: $overlay2;
+
+    border-style: solid;
+    border-width: $border-size;
+    border-color: $base;
+    border-radius: $border-radius;
+
+    menuitem {
+      margin: 1px 0;
+    }
+
+    separator {
+      margin-top: $whitespace/2;
+      margin-bottom: $whitespace/2;
+      min-height: 2px;
+      border-radius: 99px;
+      background-color: $surface2;
+    }
+  }
 }
