--- a/eww/bar/scss/controls.scss
+++ b/eww/bar/scss/controls.scss
@@ -33,3 +33,38 @@
 .time:hover {
   background-color: rgba($color: $peach, $alpha: 0.9);
 }
+
+.systray {
+  background-color: $surface0;
+
+  * {
+    color: $text;
+  }
+
+  menu {
+    padding: $whitespace;
+    background-color: $surface0;
+    border-radius: $border-radius;
+
+    menuitem {
+      padding: $whitespace/2;
+      border-radius: $border-radius;
+
+      &:hover {
+        background-color: $surface1;
+      }
+
+      &:disabled label {
+        color: $surface2;
+      }
+    }
+
+    separator {
+      margin-top: $whitespace/2;
+      margin-bottom: $whitespace/2;
+      min-height: 2px;
+      border-radius: 99px;
+      background-color: $surface1;
+    }
+  }
+}
