--- a/eww/common/general.scss
+++ b/eww/common/general.scss
@@ -34,7 +34,14 @@ $border-size: 2px;
   border-radius: $border-radius;
 }
 
-.tooltip {
+tooltip label {
+  color: $base;
+
+  padding-left: $whitespace;
+  padding-right: $whitespace;
   padding-top: $whitespace/2;
   padding-bottom: $whitespace/2;
+
+  border-radius: $border-radius;
+  background: $overlay0;
 }
